Closed Bug 1313266 Opened 8 years ago Closed 8 years ago

[EME] Have ClearKey reject with TypeError for invalid input

Categories

(Core :: Audio/Video: Playback, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox52 --- fixed

People

(Reporter: cpearce, Assigned: cpearce)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

We fail the following web platform tests because gmp-clearkey rejects invalid input with InvalidStateError instead of TypeError as expected by the spec:

/encrypted-media/clearkey-invalid-license.html
/encrypted-media/clearkey-mp4-syntax-mediakeysession.html
/encrypted-media/clearkey-mp4-update-disallowed-input.html
/encrypted-media/clearkey-update-non-ascii-input.html

Since bug 1313202 added kGMPTypeError, we can just reject with the error we're supposed to, and we pass all those tests.
Comment on attachment 8804957 [details]
Bug 1313266 - Make gmp-clearkey reject with TypeError instead of InvalidAccessError on invalid input.

https://reviewboard.mozilla.org/r/88772/#review87860
Attachment #8804957 - Flags: review?(gsquelart) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/61061d39b87022c493fae5bc6757633a18f716e0
Bug 1313266 - Make gmp-clearkey reject with TypeError instead of InvalidAccessError on invalid input. r=gerald
https://hg.mozilla.org/mozilla-central/rev/61061d39b870
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in before you can comment on or make changes to this bug.