Bug 1313266 - Make gmp-clearkey reject with TypeError instead of InvalidAccessError on invalid input. r=gerald

The spec expects this, and now we pass more web platform tests.

MozReview-Commit-ID: 9HJFp2ebczk